<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarActivity">





        <TextView
            android:id="@+id/lblTitleAddCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:text="@string/lbl_title_agregar_nuevo_carro"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lyIdCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblTitleAddCar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/lbl_id_car" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtIdCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0.5"
                android:enabled="false"
                android:hint="@string/lbl_id_car" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyMarcaCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyIdCar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/lbl_marca_car" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMarcaCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0.5"
                android:hint="@string/lbl_marca_car" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyModeloCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyMarcaCar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/lbl_modelo_car" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtModeloCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0.5"
                android:hint="@string/lbl_modelo_car" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyAnioCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyModeloCar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/lbl_anio_car" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAnioCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0.5"
                android:hint="@string/lbl_anio_car" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyAsientosCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyAnioCar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/lbl_asientos_car" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAsientosCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0.5"
                android:hint="@string/lbl_asientos_car" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyColorCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyAsientosCar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/lbl_color_car" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtColorCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0.5"
                android:hint="@string/lbl_color_car" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyActionsCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyColorCar">

            <Button
                android:id="@+id/btnSaveCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/confirm"
                android:text="@string/btn_guardar_add_car" />


            <Button
                android:id="@+id/btnCancelCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/cancel"
                android:text="@string/btn_cancelar_add_car" />

        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>