<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListCarsActivity">
    <TextView
        android:id="@+id/lblTitleCars"
        android:text="@string/title_listado_carros"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/lblMarcaLegend"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca_carros_legend"
        app:layout_constraintStart_toStartOf="@id/lblTitleCars"
        app:layout_constraintTop_toBottomOf="@id/lblTitleCars"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblModeloLegend"
        android:text="@string/modelo_carros_legend"
        app:layout_constraintEnd_toEndOf="@id/lblTitleCars"
        app:layout_constraintTop_toBottomOf="@id/lblTitleCars"
        android:layout_marginTop="10sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerCar"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblMarcaLegend"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddCar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30sp"
        android:layout_marginEnd="30sp"
        app:srcCompat="@android:drawable/ic_input_add"
        />
</androidx.constraintlayout.widget.ConstraintLayout>